# antenna_calibration

./: README.md  mypublications.tex
Books/: MathematicalFoundations0  verilog1
ConceptIntegral/: ConceptIntegral.aux  ConceptIntegral.dvi  ConceptIntegral.tex  ConceptIntegral.tex.bak
ConceptReport/: ConceptReport.aux  ConceptReport.bak  ConceptReport.dvi  ConceptReport.ilg  ConceptReport.tex  ConceptReport.tex.bak
ConceptTech/: E-Field.asc  EH-coord.asc  H-Field.asc  PowerDistribution.asc  PowerResults.asc  PowerScreen.asc  buildgeo.out  co_char.asc  co_charm.asc  co_cmovie.asc  co_cv.asc  co_eff.asc  co_tcl.asc  co_zin.asc  concept-gui.glv  concept.bak  concept.cfg  concept.in  concept.out  confreq.in  conin.w  output.ps  powerflow.glv  powerflow.in  rad.1  rad2d.asc  rad2dh.asc  radiate.out  radiate2d.in  radiate3d.in  radvs.1  simple.dxf  simple.stl  simple.wrl  simple_WS.stl  smith.in  smith.ps  sparam.in  suef.1  surf.0  (+5 more)
DF/: DF-Stereo.aux  DF-Stereo.dvi  (+20 more)
nec/necpp/necpp-1.1.1/src/: BaseInput.h  Makefile  Makefile.am  Makefile.in  PowerBudget.h  RadiationInput.h  c_evlcom.cpp  c_evlcom.h  c_geometry.cpp  c_geometry.h  c_ggrid.cpp  common.h  math_util.h  matrix_algebra.cpp  misc.cpp  misc.h  nec2++  nec2cpp.cpp  nec2diff  nec_context.cpp  nec_context.h  nec_output.cpp  nec_radiation_pattern.cpp  safe_array.h
nec/necpp/necpp-1.1.1/src/.deps/: XGetopt.Po  c_evlcom.Po  c_geometry.Po  c_ggrid.Po  c_plot_card.Po  libNEC.Po  matrix_algebra.Po  misc.Po  nec2cpp.Po  necDiff.Po  nec_context.Po  nec_exception.Po  nec_ground.Po  nec_output.Po  nec_radiation_pattern.Po
(+1886 files in other folders)
